// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pill > renders 1`] = `
<ForwardRef
  clickable={false}
  data-advanced={false}
  text="This is my..."
/>
`;

exports[`Pill > treats @ text differently 1`] = `
<ForwardRef
  clickable={false}
  data-advanced={false}
  text="@(exp)"
/>
`;
